--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="register-page">
     <!-- ===== CINEMATIC HEADER ===== -->
     <header class="cinematic-header" id="mainHeader">
         <div class="header-container">
@@ -29,7 +29,7 @@
                 <div class="brand-logo">
                     <i class="fas fa-theater-masks"></i>
                 </div>
-                <span class="brand-name">Royal Theater</span>
+                <span class="brand-name">Royal Theater Group</span>
             </a>
             
             <!-- Main Navigation -->
@@ -68,7 +68,7 @@
                 <div class="brand-logo">
                     <i class="fas fa-theater-masks"></i>
                 </div>
-                <span class="brand-name">Royal Theater</span>
+                <span class="brand-name">Royal Theater Group</span>
             </div>
             <button class="mobile-menu-toggle" id="mobileMenuClose" aria-label="Close menu">
                 <i class="fas fa-times"></i>
@@ -240,7 +240,7 @@
     </section>
     
     <!-- ===== JAVASCRIPT ===== -->
-    <script>
+<script>
         // Mobile Menu Functionality
         const mobileMenuToggle = document.getElementById('mobileMenuToggle');
         const mobileMenuClose = document.getElementById('mobileMenuClose');
@@ -367,5 +367,8 @@
         // Add fade-in animation
         document.querySelector('.register-card').classList.add('fade-in');
     </script>
+    <script src="js/theme-toggle.js"></script>
 </body>
 </html>
+
+
