--- a/shows_old.html
+++ b/shows_old.html
@@ -992,5 +992,8 @@
                         
 
     <script src="js/main.js"></script>
+    <script src="js/theme-toggle.js"></script>
 </body>
 </html>
+
+
