--- a/simple_test.html
+++ b/simple_test.html
@@ -35,5 +35,8 @@
         <p>If you can see this page with proper styling, the CSS is working correctly.</p>
         <p>The header should be fixed at the top, and this content should have a beige background.</p>
     </div>
+    <script src="js/theme-toggle.js"></script>
 </body>
 </html>
+
+
