--- a/tickets.html
+++ b/tickets.html
@@ -89,7 +89,7 @@
                 <div class="brand-logo">
                     <i class="fas fa-theater-masks"></i>
                 </div>
-                <span class="brand-name">Royal Theater</span>
+                <span class="brand-name">Royal Theater Group</span>
             </div>
             <button class="mobile-menu-toggle" id="mobileMenuClose" aria-label="Close mobile menu">
                 <div class="hamburger-icon">
@@ -216,7 +216,7 @@
                                 Program included
                             </li>
                         </ul>
-                        <a href="#booking-form" class="cta-button login">Book Now</a>
+                        <a href="#booking-form" class="cta-button register">Book Now</a>
                     </div>
                     
                     <div class="ticket-card fade-in-delay-2" style="background: #2a2a2a; border-radius: 15px; padding: 2rem; text-align: center; transition: transform 0.3s ease; border: 2px solid var(--accent-gold);">
@@ -686,7 +686,7 @@
     </footer>
     
     <!-- ===== JAVASCRIPT ===== -->
-    <script>
+<script>
         // Mobile Menu Toggle
         const mobileMenuToggle = document.getElementById('mobileMenuToggle');
         const mobileMenuClose = document.getElementById('mobileMenuClose');
@@ -770,5 +770,8 @@
         });
         });
     </script>
+    <script src="js/theme-toggle.js"></script>
 </body>
 </html>
+
+
