--- a/shows.html
+++ b/shows.html
@@ -89,7 +89,7 @@
                 <div class="brand-logo">
                     <i class="fas fa-theater-masks"></i>
                 </div>
-                <span class="brand-name">Royal Theater</span>
+                <span class="brand-name">Royal Theater Group</span>
             </div>
             <button class="mobile-menu-toggle" id="mobileMenuClose" aria-label="Close mobile menu">
                 <div class="hamburger-icon">
@@ -588,7 +588,7 @@
     </footer>
     
     <!-- ===== JAVASCRIPT ===== -->
-    <script>
+<script>
         // Mobile Menu Toggle
         const mobileMenuToggle = document.getElementById('mobileMenuToggle');
         const mobileMenuClose = document.getElementById('mobileMenuClose');
@@ -660,5 +660,8 @@
             });
         });
     </script>
+    <script src="js/theme-toggle.js"></script>
 </body>
 </html>
+
+
