Fix mobile layout overlap and update site assets/content

--- a/register.html
+++ b/register.html
@@ -98,10 +98,12 @@
         <div class="register-container">
             <div class="register-card fade-in">
                 <div class="register-header text-center">
-                    <div class="register-logo">
-                        <i class="fas fa-theater-masks"></i>
-                    </div>
-                    <h1 class="text-light">Join Royal Theater</h1>
+                    <a href="index.html" class="auth-card-brand" aria-label="Go to home page">
+                        <div class="register-logo">
+                            <i class="fas fa-theater-masks"></i>
+                        </div>
+                        <h1 class="text-light">Royal Theater Group</h1>
+                    </a>
                     <p class="text-light">Create your account and unlock exclusive member benefits</p>
                 </div>
                 
@@ -231,6 +233,12 @@
                         Create Account
                     </button>
                 </form>
+
+                <div class="auth-social" aria-label="Social links">
+                    <a href="#" class="auth-social-link" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="auth-social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="auth-social-link" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                </div>
                 
                 <div class="register-footer">
                     <p class="text-light">Already have an account? <a href="login.html" class="login-link">Login here</a></p>
