--- a/dashboard.html
+++ b/dashboard.html
@@ -100,7 +100,7 @@
         <!-- Dashboard Hero -->
         <section class="dashboard-hero" style="padding: 4rem 0; background: linear-gradient(135deg, rgba(212, 175, 55, 0.1), rgba(26, 26, 26, 0.95));">
             <div class="container">
-                <div class="dashboard-welcome">
+                <div class="dashboard-welcome" style="text-align: center;">
                     <h1 class="text-light" style="font-size: 3rem; margin-bottom: 1rem;">Welcome back, John!</h1>
                     <p class="text-light" style="font-size: 1.2rem; opacity: 0.9;">
                         Manage your bookings, view analytics, and access exclusive member benefits
