--- a/home2.html
+++ b/home2.html
@@ -344,9 +344,13 @@
                             <p class="text-light" style="font-size: 1.1rem; line-height: 1.8; margin-bottom: 1.5rem; font-style: italic;">
                                 "Absolutely breathtaking performances! The Royal Theater Group never fails to deliver world-class entertainment."
                             </p>
-                            <div class="testimonial-author">
-                                <div class="author-name text-gold" style="font-weight: 600; margin-bottom: 0.25rem;">Sarah Mitchell</div>
-                                <div class="author-title text-gray">Theater Enthusiast</div>
+                            <div class="testimonial-author" style="display: flex; align-items: center; gap: 0.9rem;">
+                                <img src="assets/images/shows/sarah-williams.jpg" alt="Sarah Mitchell"
+                                    style="width: 52px; height: 52px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-gold); flex-shrink: 0;">
+                                <div>
+                                    <div class="author-name text-gold" style="font-weight: 600; margin-bottom: 0.25rem;">Sarah Mitchell</div>
+                                    <div class="author-title text-gray">Theater Enthusiast</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -356,9 +360,13 @@
                             <p class="text-light" style="font-size: 1.1rem; line-height: 1.8; margin-bottom: 1.5rem; font-style: italic;">
                                 "Every visit is a magical experience. The attention to detail and talented performers make this my favorite theater."
                             </p>
-                            <div class="testimonial-author">
-                                <div class="author-name text-gold" style="font-weight: 600; margin-bottom: 0.25rem;">Michael Chen</div>
-                                <div class="author-title text-gray">Regular Patron</div>
+                            <div class="testimonial-author" style="display: flex; align-items: center; gap: 0.9rem;">
+                                <img src="assets/images/shows/michael-chen.jpg" alt="Michael Chen"
+                                    style="width: 52px; height: 52px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-gold); flex-shrink: 0;">
+                                <div>
+                                    <div class="author-name text-gold" style="font-weight: 600; margin-bottom: 0.25rem;">Michael Chen</div>
+                                    <div class="author-title text-gray">Regular Patron</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -368,9 +376,13 @@
                             <p class="text-light" style="font-size: 1.1rem; line-height: 1.8; margin-bottom: 1.5rem; font-style: italic;">
                                 "The quality of productions here rivals Broadway. I've been coming for years and it just keeps getting better!"
                             </p>
-                            <div class="testimonial-author">
-                                <div class="author-name text-gold" style="font-weight: 600; margin-bottom: 0.25rem;">Emma Rodriguez</div>
-                                <div class="author-title text-gray">Cultural Critic</div>
+                            <div class="testimonial-author" style="display: flex; align-items: center; gap: 0.9rem;">
+                                <img src="assets/images/team/education-director.jpg" alt="Emma Rodriguez"
+                                    style="width: 52px; height: 52px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-gold); flex-shrink: 0;">
+                                <div>
+                                    <div class="author-name text-gold" style="font-weight: 600; margin-bottom: 0.25rem;">Emma Rodriguez</div>
+                                    <div class="author-title text-gray">Cultural Critic</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -387,12 +399,12 @@
                         <p class="text-light" style="font-size: 1.3rem; line-height: 1.8; max-width: 800px; margin: 0 auto 2rem;">
                             Become part of a vibrant community of theater lovers, artists, and creators.
                         </p>
-                        <div class="cta-buttons" style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
-                            <a href="register.html" class="cta-button register" style="font-size: 1.2rem; padding: 1.2rem 2.5rem;">
+                        <div class="cta-buttons" style="display: flex; gap: 1rem; justify-content: center !important; align-items: center; flex-wrap: wrap; width: fit-content; max-width: 100%; margin: 0 auto;">
+                            <a href="register.html" class="cta-button register" style="font-size: 1.2rem; padding: 1.2rem 2.5rem; margin: 0;">
                                 <i class="fas fa-user-plus"></i>
                                 Join Now
                             </a>
-                            <a href="contact.html" class="cta-button login" style="font-size: 1.2rem; padding: 1.2rem 2.5rem;">
+                            <a href="contact.html" class="cta-button login" style="font-size: 1.2rem; padding: 1.2rem 2.5rem; margin: 0;">
                                 <i class="fas fa-info-circle"></i>
                                 Learn More
                             </a>
@@ -463,7 +475,7 @@
             <!-- Copyright -->
             <div class="footer-bottom" style="text-align: center; padding-top: 2rem; border-top: 1px solid var(--border-light);">
                 <p class="text-gray" style="font-size: 0.9rem;">
-                    &copy; 2024 Royal Theater Group. All rights reserved. | 
+                    &copy; 2026 Royal Theater Group. All rights reserved. | 
                     <a href="privacy-policy.html" class="text-gold" style="text-decoration: none;">Privacy Policy</a> | 
                     <a href="terms-conditions.html" class="text-gold" style="text-decoration: none;">Terms of Service</a>
                 </p>
