--- a/index.html
+++ b/index.html
@@ -375,10 +375,14 @@
                                 "Absolutely breathtaking performances! The Royal Theater Group never fails to deliver
                                 world-class entertainment that leaves you speechless."
                             </p>
-                            <div class="testimonial-author">
-                                <div class="author-name text-gold" style="font-weight: 600; margin-bottom: 0.25rem;">
-                                    Sarah Mitchell</div>
-                                <div class="author-title text-gray">Theater Enthusiast</div>
+                            <div class="testimonial-author" style="display: flex; align-items: center; gap: 0.9rem;">
+                                <img src="assets/images/shows/sarah-williams.jpg" alt="Sarah Mitchell"
+                                    style="width: 52px; height: 52px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-gold); flex-shrink: 0;">
+                                <div>
+                                    <div class="author-name text-gold" style="font-weight: 600; margin-bottom: 0.25rem;">
+                                        Sarah Mitchell</div>
+                                    <div class="author-title text-gray">Theater Enthusiast</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -391,10 +395,14 @@
                                 "Every visit is a magical experience. The attention to detail, talented performers, and
                                 stunning productions make this my favorite theater."
                             </p>
-                            <div class="testimonial-author">
-                                <div class="author-name text-gold" style="font-weight: 600; margin-bottom: 0.25rem;">
-                                    Michael Chen</div>
-                                <div class="author-title text-gray">Regular Patron</div>
+                            <div class="testimonial-author" style="display: flex; align-items: center; gap: 0.9rem;">
+                                <img src="assets/images/shows/michael-chen.jpg" alt="Michael Chen"
+                                    style="width: 52px; height: 52px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-gold); flex-shrink: 0;">
+                                <div>
+                                    <div class="author-name text-gold" style="font-weight: 600; margin-bottom: 0.25rem;">
+                                        Michael Chen</div>
+                                    <div class="author-title text-gray">Regular Patron</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -407,10 +415,14 @@
                                 "The quality of productions here rivals Broadway. I've been coming for years and the
                                 experience just keeps getting better!"
                             </p>
-                            <div class="testimonial-author">
-                                <div class="author-name text-gold" style="font-weight: 600; margin-bottom: 0.25rem;">
-                                    Emma Rodriguez</div>
-                                <div class="author-title text-gray">Cultural Critic</div>
+                            <div class="testimonial-author" style="display: flex; align-items: center; gap: 0.9rem;">
+                                <img src="assets/images/team/education-director.jpg" alt="Emma Rodriguez"
+                                    style="width: 52px; height: 52px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-gold); flex-shrink: 0;">
+                                <div>
+                                    <div class="author-name text-gold" style="font-weight: 600; margin-bottom: 0.25rem;">
+                                        Emma Rodriguez</div>
+                                    <div class="author-title text-gray">Cultural Critic</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -426,12 +438,12 @@
                         destination
                     </p>
                     <div class="cta-buttons"
-                        style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
-                        <a href="shows.html" class="cta-button register" style="font-size: 1.1rem; padding: 1rem 2rem;">
+                        style="display: flex; gap: 1rem; justify-content: center !important; align-items: center; flex-wrap: wrap; width: fit-content; max-width: 100%; margin: 0 auto;">
+                        <a href="shows.html" class="cta-button register" style="font-size: 1.1rem; padding: 1rem 2rem; margin: 0;">
                             <i class="fas fa-ticket-alt"></i>
                             Browse Shows
                         </a>
-                        <a href="register.html" class="cta-button login" style="font-size: 1.1rem; padding: 1rem 2rem;">
+                        <a href="register.html" class="cta-button login" style="font-size: 1.1rem; padding: 1rem 2rem; margin: 0;">
                             <i class="fas fa-user-plus"></i>
                             Become a Member
                         </a>
@@ -569,13 +581,15 @@
                         </p>
                         <div class="community-stats"
                             style="display: grid; grid-template-columns: 1fr 1fr; gap: 2rem; margin-bottom: 2rem; width: 100%;">
-                            <div class="stat-item">
+                            <div class="stat-item"
+                                style="display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">
                                 <div class="stat-number"
                                     style="font-size: 2.5rem; font-weight: 900; color: var(--accent-gold); margin-bottom: 0.5rem;">
                                     5,000+</div>
                                 <div class="stat-label" style="color: var(--text-light);">Active Members</div>
                             </div>
-                            <div class="stat-item">
+                            <div class="stat-item"
+                                style="display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">
                                 <div class="stat-number"
                                     style="font-size: 2.5rem; font-weight: 900; color: var(--accent-gold); margin-bottom: 0.5rem;">
                                     200+</div>
@@ -780,7 +794,7 @@
             <div class="footer-bottom"
                 style="text-align: center; padding-top: 2rem; border-top: 1px solid var(--border-light);">
                 <p class="text-gray" style="font-size: 0.9rem;">
-                    &copy; 2024 Royal Theater Group. All rights reserved. |
+                    &copy; 2026 Royal Theater Group. All rights reserved. |
                     <a href="privacy-policy.html" class="text-gold" style="text-decoration: none;">Privacy Policy</a> |
                     <a href="terms-conditions.html" class="text-gold" style="text-decoration: none;">Terms of
                         Service</a>
@@ -883,5 +897,3 @@
 </body>
 
 </html>
-
-
