--- a/login.html
+++ b/login.html
@@ -98,10 +98,12 @@
         <div class="login-container">
             <div class="login-card fade-in">
                 <div class="login-header text-center">
-                    <div class="login-logo">
-                        <i class="fas fa-theater-masks"></i>
-                    </div>
-                    <h1 class="text-light">Welcome Back</h1>
+                    <a href="index.html" class="auth-card-brand" aria-label="Go to home page">
+                        <div class="login-logo">
+                            <i class="fas fa-theater-masks"></i>
+                        </div>
+                        <h1 class="text-light">Royal Theater Group</h1>
+                    </a>
                     <p class="text-light">Login to your Royal Theater Group account</p>
                 </div>
                 
@@ -141,6 +143,12 @@
                         Login
                     </button>
                 </form>
+
+                <div class="auth-social" aria-label="Social links">
+                    <a href="#" class="auth-social-link" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="auth-social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="auth-social-link" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                </div>
                 
                 <div class="login-footer">
                     <p class="text-light">Don't have an account? <a href="register.html" class="register-link">Register here</a></p>
