--- a/shows.html
+++ b/shows.html
@@ -488,7 +488,7 @@
             <div class="container">
                 <div class="venue-content" style="display: grid; grid-template-columns: 1fr 1fr; gap: 4rem; align-items: center;">
                     <div class="venue-text fade-in">
-                        <h2 class="text-gold" style="font-size: 3rem; margin-bottom: 1.5rem;">World-Class Venues</h2>
+                        <h2 class="text-gold" style="font-size: 3rem; margin-bottom: 1.5rem; text-align: center;">World-Class Venues</h2>
                         <p class="text-light" style="font-size: 1.2rem; line-height: 1.8; margin-bottom: 2rem;">
                             Experience our productions in stunning venues designed for optimal acoustics and sightlines.
                         </p>
@@ -506,7 +506,7 @@
                                 <span class="text-light">Convenient parking and accessibility</span>
                             </div>
                         </div>
-                        <a href="contact.html" class="cta-button register" style="font-size: 1.1rem; padding: 1rem 2rem;">
+                        <a href="contact.html" class="cta-button register" style="font-size: 1.1rem; padding: 1rem 2rem; display: flex; width: fit-content; margin: 0 auto;">
                             <i class="fas fa-map-marker-alt"></i>
                             Visit Us
                         </a>
@@ -579,7 +579,7 @@
             <!-- Copyright -->
             <div class="footer-bottom" style="text-align: center; padding-top: 2rem; border-top: 1px solid var(--border-light);">
                 <p class="text-gray" style="font-size: 0.9rem;">
-                    &copy; 2024 Royal Theater Group. All rights reserved. | 
+                    &copy; 2026 Royal Theater Group. All rights reserved. | 
                     <a href="privacy-policy.html" class="text-gold" style="text-decoration: none;">Privacy Policy</a> | 
                     <a href="terms-conditions.html" class="text-gold" style="text-decoration: none;">Terms of Service</a>
                 </p>
