Rebranding to Royal Theater and UI alignment fixes

--- a/about.html
+++ b/about.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Royal Theater Group</title>
+    <title>About - Royal Theater</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
     <!-- Header -->
     <header class="header">
@@ -59,8 +63,10 @@
             <div class="mission-content">
                 <div class="mission-text">
                     <h2>Our Mission</h2>
-                    <p>To create transformative theatrical experiences that inspire, challenge, and unite our community through the power of live performance.</p>
-                    <p>We believe in the magic of theater to transport audiences, spark conversations, and create lasting memories that enrich lives and strengthen cultural bonds.</p>
+                    <p>To create transformative theatrical experiences that inspire, challenge, and unite our community
+                        through the power of live performance.</p>
+                    <p>We believe in the magic of theater to transport audiences, spark conversations, and create
+                        lasting memories that enrich lives and strengthen cultural bonds.</p>
                 </div>
                 <div class="mission-image">
                     <div class="image-container" style="background-image: url('assets/images/about/mission.jpg');">
@@ -80,35 +86,40 @@
                     <div class="timeline-year">1999</div>
                     <div class="timeline-content">
                         <h3>The Beginning</h3>
-                        <p>Royal Theater Group was founded with a vision to bring professional theater to our community. Our first production was "A Midsummer Night's Dream" in a rented hall.</p>
+                        <p>Royal Theater was founded with a vision to bring professional theater to our community. Our
+                            first production was "A Midsummer Night's Dream" in a rented hall.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-year">2005</div>
                     <div class="timeline-content">
                         <h3>New Home</h3>
-                        <p>We moved into our current location, a state-of-the-art facility with two theaters, rehearsal spaces, and modern amenities.</p>
+                        <p>We moved into our current location, a state-of-the-art facility with two theaters, rehearsal
+                            spaces, and modern amenities.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-year">2012</div>
                     <div class="timeline-content">
                         <h3>Expansion</h3>
-                        <p>Added our Studio Theater and launched our education program, offering workshops and classes for aspiring artists.</p>
+                        <p>Added our Studio Theater and launched our education program, offering workshops and classes
+                            for aspiring artists.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-year">2020</div>
                     <div class="timeline-content">
                         <h3>Innovation</h3>
-                        <p>Pioneered digital theater experiences during challenging times, reaching audiences worldwide while maintaining our commitment to live performance.</p>
+                        <p>Pioneered digital theater experiences during challenging times, reaching audiences worldwide
+                            while maintaining our commitment to live performance.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-year">2024</div>
                     <div class="timeline-content">
                         <h3>Silver Jubilee</h3>
-                        <p>Celebrating 25 years of exceptional theater with our most ambitious season yet, featuring world premieres and beloved classics.</p>
+                        <p>Celebrating 25 years of exceptional theater with our most ambitious season yet, featuring
+                            world premieres and beloved classics.</p>
                     </div>
                 </div>
             </div>
@@ -132,35 +143,40 @@
                         <i class="fas fa-users"></i>
                     </div>
                     <h3>Inclusivity</h3>
-                    <p>We create welcoming spaces for diverse voices and stories, ensuring theater reflects our rich community.</p>
+                    <p>We create welcoming spaces for diverse voices and stories, ensuring theater reflects our rich
+                        community.</p>
                 </div>
                 <div class="value-card">
                     <div class="value-icon">
                         <i class="fas fa-lightbulb"></i>
                     </div>
                     <h3>Innovation</h3>
-                    <p>We push creative boundaries while honoring theatrical traditions, bringing fresh perspectives to classic and new works.</p>
+                    <p>We push creative boundaries while honoring theatrical traditions, bringing fresh perspectives to
+                        classic and new works.</p>
                 </div>
                 <div class="value-card">
                     <div class="value-icon">
                         <i class="fas fa-graduation-cap"></i>
                     </div>
                     <h3>Education</h3>
-                    <p>We nurture the next generation of theater artists and audiences through comprehensive education programs.</p>
+                    <p>We nurture the next generation of theater artists and audiences through comprehensive education
+                        programs.</p>
                 </div>
                 <div class="value-card">
                     <div class="value-icon">
                         <i class="fas fa-handshake"></i>
                     </div>
                     <h3>Collaboration</h3>
-                    <p>We believe in the power of partnership, working with artists, organizations, and our community to create meaningful experiences.</p>
+                    <p>We believe in the power of partnership, working with artists, organizations, and our community to
+                        create meaningful experiences.</p>
                 </div>
                 <div class="value-card">
                     <div class="value-icon">
                         <i class="fas fa-star"></i>
                     </div>
                     <h3>Excellence</h3>
-                    <p>We strive for the highest standards in every aspect of our productions, from casting to curtain call.</p>
+                    <p>We strive for the highest standards in every aspect of our productions, from casting to curtain
+                        call.</p>
                 </div>
             </div>
         </div>
@@ -172,13 +188,15 @@
             <h2 class="section-title">Leadership Team</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <div class="member-photo" style="background-image: url('assets/images/team/artistic-director.jpg');">
+                    <div class="member-photo"
+                        style="background-image: url('assets/images/team/artistic-director.jpg');">
                         <!-- Replace this image path with your own image if not visible -->
                     </div>
                     <div class="member-info">
                         <h3>Dr. Sarah Mitchell</h3>
                         <span class="member-title">Artistic Director</span>
-                        <p>With over 30 years of theater experience, Dr. Mitchell has shaped our artistic vision and championed innovative programming.</p>
+                        <p>With over 30 years of theater experience, Dr. Mitchell has shaped our artistic vision and
+                            championed innovative programming.</p>
                         <div class="member-social">
                             <a href="#"><i class="fab fa-linkedin"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -187,13 +205,15 @@
                 </div>
 
                 <div class="team-member">
-                    <div class="member-photo" style="background-image: url('assets/images/team/executive-director.jpg');">
+                    <div class="member-photo"
+                        style="background-image: url('assets/images/team/executive-director.jpg');">
                         <!-- Replace this image path with your own image if not visible -->
                     </div>
                     <div class="member-info">
                         <h3>James Chen</h3>
                         <span class="member-title">Executive Director</span>
-                        <p>James brings extensive nonprofit management experience, ensuring our financial sustainability and community impact.</p>
+                        <p>James brings extensive nonprofit management experience, ensuring our financial sustainability
+                            and community impact.</p>
                         <div class="member-social">
                             <a href="#"><i class="fab fa-linkedin"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -202,13 +222,15 @@
                 </div>
 
                 <div class="team-member">
-                    <div class="member-photo" style="background-image: url('assets/images/team/technical-director.jpg');">
+                    <div class="member-photo"
+                        style="background-image: url('assets/images/team/technical-director.jpg');">
                         <!-- Replace this image path with your own image if not visible -->
                     </div>
                     <div class="member-info">
                         <h3>Emily Rodriguez</h3>
                         <span class="member-title">Technical Director</span>
-                        <p>Emily oversees all technical aspects of our productions, from set design to lighting, ensuring flawless performances.</p>
+                        <p>Emily oversees all technical aspects of our productions, from set design to lighting,
+                            ensuring flawless performances.</p>
                         <div class="member-social">
                             <a href="#"><i class="fab fa-linkedin"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -217,13 +239,15 @@
                 </div>
 
                 <div class="team-member">
-                    <div class="member-photo" style="background-image: url('assets/images/team/education-director.jpg');">
+                    <div class="member-photo"
+                        style="background-image: url('assets/images/team/education-director.jpg');">
                         <!-- Replace this image path with your own image if not visible -->
                     </div>
                     <div class="member-info">
                         <h3>Michael Thompson</h3>
                         <span class="member-title">Education Director</span>
-                        <p>Michael develops and leads our education programs, inspiring the next generation of theater artists and enthusiasts.</p>
+                        <p>Michael develops and leads our education programs, inspiring the next generation of theater
+                            artists and enthusiasts.</p>
                         <div class="member-social">
                             <a href="#"><i class="fab fa-linkedin"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -240,12 +264,14 @@
             <h2 class="section-title">Our Facilities</h2>
             <div class="facilities-grid">
                 <div class="facility-card">
-                    <div class="facility-image" style="background-image: url('assets/images/facilities/main-theater.jpg');">
+                    <div class="facility-image"
+                        style="background-image: url('assets/images/facilities/main-theater.jpg');">
                         <!-- Replace this image path with your own image if not visible -->
                     </div>
                     <div class="facility-content">
                         <h3>Main Theater</h3>
-                        <p>Our 500-seat flagship venue featuring state-of-the-art lighting, sound systems, and comfortable seating with excellent sightlines.</p>
+                        <p>Our 500-seat flagship venue featuring state-of-the-art lighting, sound systems, and
+                            comfortable seating with excellent sightlines.</p>
                         <ul class="facility-features">
                             <li><i class="fas fa-check"></i> 500 seats</li>
                             <li><i class="fas fa-check"></i> Orchestra and balcony sections</li>
@@ -256,12 +282,14 @@
                 </div>
 
                 <div class="facility-card">
-                    <div class="facility-image" style="background-image: url('assets/images/facilities/studio-theater.jpg');">
+                    <div class="facility-image"
+                        style="background-image: url('assets/images/facilities/studio-theater.jpg');">
                         <!-- Replace this image path with your own image if not visible -->
                     </div>
                     <div class="facility-content">
                         <h3>Studio Theater</h3>
-                        <p>An intimate 200-seat black box theater perfect for experimental works, educational performances, and community events.</p>
+                        <p>An intimate 200-seat black box theater perfect for experimental works, educational
+                            performances, and community events.</p>
                         <ul class="facility-features">
                             <li><i class="fas fa-check"></i> 200 flexible seats</li>
                             <li><i class="fas fa-check"></i> Configurable staging</li>
@@ -272,12 +300,14 @@
                 </div>
 
                 <div class="facility-card">
-                    <div class="facility-image" style="background-image: url('assets/images/facilities/rehearsal-spaces.jpg');">
+                    <div class="facility-image"
+                        style="background-image: url('assets/images/facilities/rehearsal-spaces.jpg');">
                         <!-- Replace this image path with your own image if not visible -->
                     </div>
                     <div class="facility-content">
                         <h3>Rehearsal Spaces</h3>
-                        <p>Multiple rehearsal studios equipped with mirrors, dance floors, and audio systems for cast preparation and workshops.</p>
+                        <p>Multiple rehearsal studios equipped with mirrors, dance floors, and audio systems for cast
+                            preparation and workshops.</p>
                         <ul class="facility-features">
                             <li><i class="fas fa-check"></i> 3 rehearsal studios</li>
                             <li><i class="fas fa-check"></i> Dance floors</li>
@@ -344,7 +374,8 @@
                         <i class="fas fa-theater-masks"></i>
                         <h3>Theater Group Website</h3>
                     </div>
-                    <p>Experience the magic of live theater with our world-class productions, talented artists, and unforgettable performances.</p>
+                    <p>Experience the magic of live theater with our world-class productions, talented artists, and
+                        unforgettable performances.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -391,6 +422,5 @@
     <script src="js/main.js"></script>
     <script src="js/theme-toggle.js"></script>
 </body>
+
 </html>
-
-
