--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Royal Theater Group</title>
+    <title>Home - Royal Theater</title>
     <meta name="description"
-        content="Experience the magic of live theater at Royal Theater Group. Premium performances, world-class productions, and unforgettable entertainment.">
+        content="Experience the magic of live theater at Royal Theater. Premium performances, world-class productions, and unforgettable entertainment.">
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml"
@@ -35,7 +35,7 @@
                 <div class="brand-logo">
                     <i class="fas fa-theater-masks"></i>
                 </div>
-                <span class="brand-name">Royal Theater Group</span>
+                <span class="brand-name">Royal Theater</span>
             </a>
 
             <!-- Center Zone - Main Navigation -->
@@ -95,7 +95,7 @@
                 <div class="brand-logo">
                     <i class="fas fa-theater-masks"></i>
                 </div>
-                <span class="brand-name">Royal Theater Group</span>
+                <span class="brand-name">Royal Theater</span>
             </div>
             <button class="mobile-menu-toggle" id="mobileMenuClose" aria-label="Close mobile menu">
                 <div class="hamburger-icon">
@@ -182,7 +182,7 @@
                     <p class="text-light"
                         style="font-size: 1.5rem; margin-bottom: 2.5rem; max-width: 600px; margin-left: auto; margin-right: auto;">
                         Step into a world of captivating performances, world-class productions, and unforgettable
-                        entertainment at Royal Theater Group.
+                        entertainment at Royal Theater.
                     </p>
                     <div class="hero-cta fade-in-delay-1">
                         <a href="shows.html" class="cta-button register"
@@ -253,7 +253,7 @@
                         <h2 class="text-gold" style="font-size: 2.5rem; margin-bottom: 1.5rem;">About Royal Theater
                             Group</h2>
                         <p class="text-light" style="font-size: 1.1rem; line-height: 1.8; margin-bottom: 1.5rem;">
-                            For over three decades, Royal Theater Group has been the cornerstone of live entertainment,
+                            For over three decades, Royal Theater has been the cornerstone of live entertainment,
                             bringing world-class productions to audiences who appreciate the magic of theater.
                         </p>
                         <p class="text-light" style="font-size: 1.1rem; line-height: 1.8; margin-bottom: 2rem;">
@@ -276,7 +276,7 @@
                 <div class="section-header text-center fade-in">
                     <h2 class="text-gold" style="font-size: 3rem; margin-bottom: 1rem;">Why Choose Us</h2>
                     <p class="text-light" style="font-size: 1.2rem; max-width: 600px; margin: 0 auto;">
-                        Discover what makes Royal Theater Group the ultimate destination for live entertainment
+                        Discover what makes Royal Theater the ultimate destination for live entertainment
                     </p>
                 </div>
 
@@ -372,14 +372,15 @@
                         <div class="testimonial-content">
                             <p class="text-light"
                                 style="font-size: 1.1rem; line-height: 1.8; margin-bottom: 1.5rem; font-style: italic;">
-                                "Absolutely breathtaking performances! The Royal Theater Group never fails to deliver
+                                "Absolutely breathtaking performances! The Royal Theater never fails to deliver
                                 world-class entertainment that leaves you speechless."
                             </p>
                             <div class="testimonial-author" style="display: flex; align-items: center; gap: 0.9rem;">
                                 <img src="assets/images/shows/sarah-williams.jpg" alt="Sarah Mitchell"
                                     style="width: 52px; height: 52px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-gold); flex-shrink: 0;">
                                 <div>
-                                    <div class="author-name text-gold" style="font-weight: 600; margin-bottom: 0.25rem;">
+                                    <div class="author-name text-gold"
+                                        style="font-weight: 600; margin-bottom: 0.25rem;">
                                         Sarah Mitchell</div>
                                     <div class="author-title text-gray">Theater Enthusiast</div>
                                 </div>
@@ -399,7 +400,8 @@
                                 <img src="assets/images/shows/michael-chen.jpg" alt="Michael Chen"
                                     style="width: 52px; height: 52px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-gold); flex-shrink: 0;">
                                 <div>
-                                    <div class="author-name text-gold" style="font-weight: 600; margin-bottom: 0.25rem;">
+                                    <div class="author-name text-gold"
+                                        style="font-weight: 600; margin-bottom: 0.25rem;">
                                         Michael Chen</div>
                                     <div class="author-title text-gray">Regular Patron</div>
                                 </div>
@@ -419,7 +421,8 @@
                                 <img src="assets/images/team/education-director.jpg" alt="Emma Rodriguez"
                                     style="width: 52px; height: 52px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-gold); flex-shrink: 0;">
                                 <div>
-                                    <div class="author-name text-gold" style="font-weight: 600; margin-bottom: 0.25rem;">
+                                    <div class="author-name text-gold"
+                                        style="font-weight: 600; margin-bottom: 0.25rem;">
                                         Emma Rodriguez</div>
                                     <div class="author-title text-gray">Cultural Critic</div>
                                 </div>
@@ -434,16 +437,18 @@
                     <h2 class="text-gold" style="font-size: 2.5rem; margin-bottom: 1rem;">Ready to Experience the Magic?
                     </h2>
                     <p class="text-light" style="font-size: 1.2rem; margin-bottom: 2rem;">
-                        Join thousands of theater lovers who have made Royal Theater Group their entertainment
+                        Join thousands of theater lovers who have made Royal Theater their entertainment
                         destination
                     </p>
                     <div class="cta-buttons"
                         style="display: flex; gap: 1rem; justify-content: center !important; align-items: center; flex-wrap: wrap; width: fit-content; max-width: 100%; margin: 0 auto;">
-                        <a href="shows.html" class="cta-button register" style="font-size: 1.1rem; padding: 1rem 2rem; margin: 0;">
+                        <a href="shows.html" class="cta-button register"
+                            style="font-size: 1.1rem; padding: 1rem 2rem; margin: 0;">
                             <i class="fas fa-ticket-alt"></i>
                             Browse Shows
                         </a>
-                        <a href="register.html" class="cta-button login" style="font-size: 1.1rem; padding: 1rem 2rem; margin: 0;">
+                        <a href="register.html" class="cta-button login"
+                            style="font-size: 1.1rem; padding: 1rem 2rem; margin: 0;">
                             <i class="fas fa-user-plus"></i>
                             Become a Member
                         </a>
@@ -675,7 +680,8 @@
                             <i class="fas fa-vr-cardboard"></i>
                         </div>
                         <h3 class="text-gold" style="margin-bottom: 1rem;">VR Theater</h3>
-                        <p class="text-light" style="margin-bottom: 1.5rem;">Immersive 360-degree virtual reality theater
+                        <p class="text-light" style="margin-bottom: 1.5rem;">Immersive 360-degree virtual reality
+                            theater
                             experiences</p>
                         <div class="virtual-features" style="text-align: left; margin-bottom: 1.5rem;">
                             <div class="feature"
@@ -734,7 +740,7 @@
                         <div class="brand-logo">
                             <i class="fas fa-theater-masks"></i>
                         </div>
-                        <span class="brand-name">Royal Theater Group</span>
+                        <span class="brand-name">Royal Theater</span>
                     </div>
                     <p class="text-light" style="margin-top: 1rem; font-size: 0.9rem;">
                         Experience the magic of live theater with world-class productions and unforgettable
@@ -794,7 +800,7 @@
             <div class="footer-bottom"
                 style="text-align: center; padding-top: 2rem; border-top: 1px solid var(--border-light);">
                 <p class="text-gray" style="font-size: 0.9rem;">
-                    &copy; 2026 Royal Theater Group. All rights reserved. |
+                    &copy; 2026 Royal Theater. All rights reserved. |
                     <a href="privacy-policy.html" class="text-gold" style="text-decoration: none;">Privacy Policy</a> |
                     <a href="terms-conditions.html" class="text-gold" style="text-decoration: none;">Terms of
                         Service</a>
@@ -804,7 +810,7 @@
     </footer>
 
     <!-- ===== JAVASCRIPT ===== -->
-<script>
+    <script>
         // Mobile Menu Toggle
         const mobileMenuToggle = document.getElementById('mobileMenuToggle');
         const mobileMenuClose = document.getElementById('mobileMenuClose');
